[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/ui_bgeffect.png" type="Texture" id=1]
[ext_resource path="res://Materials/moving_bg.tres" type="Material" id=2]
[ext_resource path="res://ToolNodes/Sliders.tscn" type="PackedScene" id=3]
[ext_resource path="res://PanelGradientMaker.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 256

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 256

[node name="PanelGradientMaker" type="PanelContainer"]
margin_right = 296.0
margin_bottom = 156.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 289.0
margin_bottom = 149.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 282.0
margin_bottom = 14.0
text = "Colorinator"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 282.0
margin_bottom = 42.0
custom_constants/separation = 0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
align = 1
suffix = "/ 999"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 282.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer2"]
margin_right = 208.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="TextureBG" type="TextureRect" parent="VBoxContainer/HBoxContainer/PanelContainer2/PanelContainer"]
material = ExtResource( 2 )
margin_left = 8.0
margin_top = 1.0
margin_right = 200.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="Gradients" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer2/PanelContainer"]
margin_left = 8.0
margin_top = 1.0
margin_right = 200.0
margin_bottom = 23.0
custom_constants/separation = 0

[node name="GradientRGB" type="TextureRect" parent="VBoxContainer/HBoxContainer/PanelContainer2/PanelContainer/Gradients"]
margin_right = 192.0
margin_bottom = 11.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 4 )
expand = true
stretch_mode = 1

[node name="GradientAll" type="TextureRect" parent="VBoxContainer/HBoxContainer/PanelContainer2/PanelContainer/Gradients"]
margin_top = 11.0
margin_right = 192.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 6 )
expand = true
stretch_mode = 1

[node name="Sliders" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 46.0
margin_right = 282.0
margin_bottom = 142.0
required_sliders = [ [ "Red", 0, 1, 0.01 ], [ "Green", 0, 1, 0.01 ], [ "Blue", 0, 1, 0.01 ], [ "Alpha", 0, 1, 0.01 ], [ "Position", 0.0, 1.0, 0.01 ] ]

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="updated_values" from="VBoxContainer/Sliders" to="." method="_on_Sliders_updated_values"]
